--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,15 +1,2 @@
-codecov:
-  notify:
-    after_n_builds: 1
-
-coverage:
-  precision: 3
-  round: down
-  range: 80...100
-
-  status:
-    project: true
-    patch: true
-    changes: true
-
+# Learn more at http://docs.codecov.io/docs/codecov-yaml
 comment: false
